--- a/planets2.Rmd
+++ b/planets2.Rmd
@@ -8,15 +8,15 @@ output: html_document
 ```{r}
 #This is how I will determine which planet to set up my base on.
 
-saturn <- 14
+saturn <- -14
 mars <- 10
 venus <- 15
 ```
 
 ```{r}
-sum(mars, venus)
+sum(saturn, mars, venus)
 ```
 
 ```{r}
-mean(saturn, mars, venus)
+mean(round(abs(saturn), mars), venus)
 ```
